--- a/config.yaml
+++ b/config.yaml
@@ -27,16 +27,21 @@ report: //import report/ch/unaudited-micro.yaml
 
 #pretty-print: true
 
-metadata: //import metadata.yaml
-#metadata: //import metadata-revised.yaml
+metadata: //import detail/metadata.yaml
+#metadata: //import detail/metadata-revised.yaml
 
-directors-report: //import directors-report.yaml
+directors-report: //import detail/directors-report.yaml
 
-auditors-report: //import auditors-report.yaml
-#auditors-report: //import revised-auditors-report.yaml
+auditors-report: //import detail/auditors-report.yaml
+#auditors-report: //import detail/revised-auditors-report.yaml
 
-accountants-report: //import accountants-report.yaml
+accountants-report: //import detail/accountants-report.yaml
 
-notes: //import notes.yaml
+revision-info: //import detail/revision-info.yaml
+notes: //import detail/notes.yaml
+
+logo: //import detail/logo.yaml
+signature: //import detail/signature.yaml
+
 
 
