Incorporated template fixes regarding pathnames

--- a/test/unaud-micro.yaml
+++ b/test/unaud-micro.yaml
@@ -4,6 +4,6 @@ accounts:
 logo: //import detail/logo.yaml
 metadata: //import test/metadata.yaml
 report: //import report/ch/unaudited-micro.yaml
-revision-info: //import revision-info.yaml
+revision-info: //import detail/revision-info.yaml
 signature: //import detail/signature.yaml
 
