Ignore mypy import errors

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,3 +1,11 @@
+[mypy]
+# Global options
+python_version = 3.12
+warn_return_any = True
+warn_unused_configs = True
+disallow_untyped_defs = False
+disallow_incomplete_defs = False
+
 [mypy-lxml.*]
 ignore_missing_imports = True
 
