--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Type check with mypy
         run: |
-          mypy gnucash_uk_vat/
+          mypy ixbrl_reporter/
 
       - name: Test package installation
         run: |
