--- a/mypy.ini
+++ b/mypy.ini
@@ -17,3 +17,6 @@ ignore_missing_imports = True
 
 [mypy-yaml.*]
 ignore_missing_imports = True
+
+[mypy-importlib_metadata]
+ignore_missing_imports = True
