--- a/pytest.ini
+++ b/pytest.ini
@@ -14,3 +14,4 @@ markers =
     integration: Integration tests  
     contract: Contract tests
     slow: Slow running tests
+    regression: Regression tests for output consistency
