--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -48,6 +48,10 @@ jobs:
         run: |
           pytest tests/integration/ -v --tb=short
 
+      - name: Run regression tests
+        run: |
+          pytest tests/regression/ -v --tb=short -m "not slow"
+
       - name: Type check with mypy
         run: |
           mypy ixbrl_reporter/
